Added ability to set quantity of cart items

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -15,8 +15,8 @@
       "constants": ["src/constants"],
       "constants/*": ["src/constants/*"],
       "components/*": ["src/components/*"],
-      "hooks": ["src/hooks"],
-      "hooks/*": ["src/hooks/*"],
+      "hooks": ["src/Hooks"],
+      "hooks/*": ["src/Hooks/*"],
       "routes": ["src/routes"],
       "routes/*": ["src/routes/*"],
       "stores": ["src/stores"],
