--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "file-loader": "^6.2.0",
     "formik": "2.2.0",
     "fs-extra": "^10.0.0",
+    "helmet": "6.1.0",
     "html-webpack-plugin": "^5.5.0",
     "i18next": "21.7.0",
     "identity-obj-proxy": "^3.0.0",
@@ -83,10 +84,11 @@
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
     "ramda": "^0.29.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "6.1.0",
     "react-i18next": "12.3.1",
     "react-icons": "4.10.1",
     "react-refresh": "^0.11.0",
